Look command working, changes in gameplay