@@ -1,13 +1,13 @@
 package sofia.sap.interview.project.game.inventory;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class Chest {
-    private final List<Item> content;
+    private final Collection<Item> content;
 
-    private Chest(List<Item> content) {
+    private Chest(Collection<Item> content) {
         this.content = new ArrayList<>(content);
     }
 
@@ -15,12 +15,8 @@ public class Chest {
         return new Chest(content);
     }
 
-    public static Chest createEmptyChest() {
-        return new Chest(Collections.emptyList());
-    }
-
-    public List<Item> collectItems() {
-        List<Item> items = List.copyOf(this.content);
+    public Collection<Item> collectItems() {
+        Collection<Item> items = List.copyOf(this.content);
         this.content.clear();
         return items;
     }
